# harfrust.net

./: LICENSE  README.md
.github/workflows/: build.yml
docs/: agents.md  checklist.md  ffi_project_guide.md  rustlib_project_guide.md
net/: .gitignore  HarfRust.sln
net/HarfRust/: Direction.cs  Feature.cs  GlyphTypes.cs  HarfRust.csproj  HarfRustBackend.cs  HarfRustBuffer.cs  HarfRustFont.cs  HarfRustGlyphBuffer.cs  HarfRustShapeSession.cs  HarfRustShaper.cs  IHarfRustBackend.cs  ShapedGlyph.cs  TextAnalyzer.cs  Variation.cs
net/HarfRust.Benchmarks/: BenchmarkUtils.cs  BufferBenchmarks.cs  FontLoadingBenchmarks.cs  HarfRust.Benchmarks.csproj  Program.cs  ShapingBenchmarks.cs
net/HarfRust.Bindings/: HarfRust.Bindings.csproj
net/HarfRust.Native/: HarfRust.Native.csproj
net/HarfRust.Tests/: ApiEnhancementTests.cs  HarfRust.Tests.csproj  HarfRustBufferTests.cs  HarfRustShaperTests.cs  HarfRustShapingTests.cs  ShapingTests.cs  TextAnalyzerTests.cs  WasmtimeExternalEngineTests.cs  test_output.txt  test_output_2.txt
net/HarfRust.Tests/Fixtures/: BackendFixture.cs  FfiBackendFixture.cs  NativeBackendFixture.cs  WasmBackendFixture.cs
net/HarfRust.Wasmtime/: HarfRust.Wasmtime.csproj  WasmBuffer.cs  WasmContext.cs  WasmFont.cs  WasmGlyphBuffer.cs  WasmtimeBackend.cs
net/HarfRust/Bindings/: NativeBackend.cs  NativeBuffer.cs  NativeFont.cs  NativeGlyphBuffer.cs  NativeMethods.g.cs
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: lib.rs
