[package]
name = "harfrust-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for harfrust text shaping library"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
harfrust = "0.5"

[build-dependencies]
csbindgen = "1.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
